1、规划梦想开奶茶店的页面 2、参与记录页面 3、联系客服页面 4、修改电话也米娜 5、上传身份证和银行卡页面 6、协议页面 7、支付页面 8、支付页面中的添加梦想页面 9、中标页面 10、中奖页面

--- a/app.json
+++ b/app.json
@@ -1,11 +1,20 @@
 {
   "pages": [
+    "pages/mx_shenfenzheng/mx_shenfengzheng",
+    "pages/mx_xieyi/mx_xieyi",
+    "pages/mx_phone/mx_phone",
+    "pages/mx_canyu/mx_canyu",
+    "pages/mx_zhongjiang/mx_zhongjiang",
+    "pages/reward/reward",
+    "pages/mx_wangjie/mx_wangjie",
+    "pages/mx_kefu/mx_kefu",
+    "pages/mx_zhongbiao/mx_zhongbiao",
+    "pages/mx_zhifu/mx_zhifu",
+    "pages/mx_zhifutianjia/mx_zhifutianjia",
     "pages/mx_wode/mx_wode",
     "pages/mx_erweima/mx_erweima",
     "pages/mx_guihua/mx_guihua",
     "pages/mx_naicha/mx_naicha",
-    "pages/reward/reward",
-    "pages/mx_wangjie/mx_wangjie",
     "pages/mx_jinxing/mx_jinxing",
     "pages/index/index",
     "pages/logs/logs"
