--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.4.0",
 	"appid": "wxf39ef35c8ff31016",
-	"projectname": "Demo_MX",
+	"projectname": "TinyDream",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
