--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.4.1",
-	"appid": "wx8da643be043ceadc",
+	"appid": "wxf39ef35c8ff31016",
 	"projectname": "TinyDream",
 	"debugOptions": {
 		"hidedInDevtools": []
