--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.4.2",
-	"appid": "wx9a61a8000316fa66",
+	"appid": "wx1eed012d4550cf4c",
 	"projectname": "TinyDream",
 	"debugOptions": {
 		"hidedInDevtools": []
