修正公式步骤参数错误 修改实名认证为最新版 简约版小程序上线
Signed-off-by: konglf2112 <konglf2112@foxmail.com>

--- a/app.json
+++ b/app.json
@@ -1,6 +1,10 @@
 {
   "pages": [
     "pages/index/index",
+    "pages/demo_user/demo_user",
+    "pages/demo_help/demo_help",
+    "pages/demo_application/demo_application",
+    "pages/demo_order/demo_order",
     "pages/mx_calc/mx_calc",
     "pages/mx_notice/mx_notice",
     "pages/mx_wenti/mx_wenti",
